# system-tender

./: .gitignore  BUILT-BY-AI.md  README.md  pyproject.toml
.claude/skills/: notify.md
docs/: security-review.md
docs/plans/: 2026-02-27-system-tender-design.md
docs/research/: menubar-app-spec.md
examples/: config.toml
examples/tasks/: brew-update-restricted.toml  brew-update.toml  disk-report.toml  git-maintenance.toml  notify-example.toml  webhook-callback.toml
src/system_tender/: __init__.py  cli.py  config.py  engine.py  logger.py  models.py  scheduler.py
tests/: conftest.py  test_cli.py  test_config.py  test_engine.py  test_models.py  test_scheduler.py
