[project]
name = "system-tender"
version = "0.1.0"
description = "Smart cron system powered by Anthropic Claude for system maintenance tasks"
readme = "README.md"
authors = [
    { name = "Brian Morin", email = "bdmorin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
system-tender = "system_tender.cli:main"
tender = "system_tender.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/system_tender"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
